Fixed bottom left position for addNew button on smaller screens

--- a/style.css
+++ b/style.css
@@ -116,6 +116,11 @@ main {
   h3 {
     text-align: center;
   }
+  #addNew {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
 }
 
 /* Pop-up Modal Styling */
